# my_projects

./: .gitignore  igonre.bak
Snake/snake/: snake.sln
Snake/snake/snake/: main.cpp  readme.txt  snake.vcxproj  snake.vcxproj.filters  test_console.cpp  text_attributes.cpp
calculator_qt/: .qmake.stash  calculator_qt.pro  calculator_qt.sln  calculator_qt.vcxproj  mainwindow.ui
console_snake/: console_snake.sln
console_snake/console_snake/: Snake.h  console_snake.vcxproj  console_snake.vcxproj.filters  graph.cpp  graph.h  main.cpp  public.h
file_trans/: CMakeLists.txt
file_trans/client/: client.cpp  client.h  common.h  queue.cpp  queue.h
file_trans/reference/: help.txt
file_trans/server/src/: common.h  server.cpp  server.h
file_transfer/: CMakeLists.txt
file_transfer/file_transfer/: CMakeLists.txt  file_transfer.cpp  file_transfer.h
flightShooting-master/flightShooting/: flightShooting.vcxproj
manage_test1/solution/: manage_test1.sln
manage_test1/solution/Temp/Win32_Debug/shared/: shared.idb
manage_test1/solution/Temp/Win32_Debug/shared/shared.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
manage_test1/solution/Temp/Win32_Debug/stu/: vc140.idb
manage_test1/solution/Temp/Win32_Debug/stu/stu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
manage_test1/solution/manage/: PropertySheet.props  shared.vcxproj  shared.vcxproj.filters  stu.vcxproj  stu.vcxproj.filters  vc140.idb
manage_test1/solution/manage/stu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  stu.lastbuildstate
manage_test1/src/mainsys/: StdAfx.h  main.cpp
manage_test1/src/shared/: Log.cpp  Log.h  logdefine.h  singleton.h  util.cpp  util.h
music/: CMakeLists.txt  README
music/cmake/: Findconfig.cmake  config.cmake
music/include/: thread_pools.h
music/src/: main.cpp  music.h
photos/: CMakeLists.txt  build.sh  main.cpp  main.cpp.bak
photos/include/exiv2/: exv_conf.h
photos/src/: file.cpp  file.h
picture/: CMakeLists.txt  README  test.cpp
picture/src/: test.cpp
shell_project/music_crawler/html/163/: singer_list.html
shell_project/music_crawler/src/: 163_main.sh  main.sh
simple_clock/: simple_clock.sln
simple_clock/simple_clock/: main.cpp  simple_clock.vcxproj
tankwar/: tankwar.sln
tankwar/tankwar/: tankwar.vcxproj  tankwar.vcxproj.filters
tankwar/tankwar/doc/: EasyX_Help.chw  ziyuan.txt
tankwar/tankwar/src/: graphic.cpp  graphic.h  main.cpp  maintank.cpp  maintank.h  tank.h
tankwar/tankwar/src/model/: point.cpp  point.h  rect.cpp  rect.h
tankwar/tankwar/test/: move_cube.cpp  test.cpp  test_stars.cpp  test_stars1.cpp  test_stars2.cpp  test_stars3.cpp  test_wawa.cpp
test/: client.c  server.c
